revisión de ortografía 1
...

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Fuera de discurso, soy una persona bastante apasionada a la informática en general, pero con mayor inclinacióbn hacia 
                     la programación...
                     <br>
-                    Soy conciente de que aún me falta bastante por aprender y experimentar, por esa razón, busco trabajar con empresas 
+                    Soy consciente de que aún me falta bastante por aprender y experimentar, por esa razón, busco trabajar con empresas 
                     y unirme a comunidaes para colaborar, aprender, y desarrollar mis habilidades.
                     <br>
                     Sueño con vivir de mis conocimientos, y a la vez, crear o contribuir a soluciones que pueda brindar, a través de mi trabajo.
