--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
             </div>
         </div>
         <br>
-        <hr>
+        <hr><br>
+        <h2>Portafolio</h2>
+        <h3>Terminados</h3>
+        <marquee behavior="alternate">Vacío Temporalmente</marquee>
+        <br>
+        <h3>En Proceso</h3>
     </div>
 </body>
 </html>
