Parche de Actualización 1

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <hr><br>
         <h2>Portafolio</h2>
         <h3>Terminados</h3>
-        <marquee behavior="alternate">Vacío Temporalmente</marquee>
+        <marquee behavior="alternate" direction="right">Vacío Temporalmente</marquee>
         <br>
         <h3>En Proceso</h3>
     </div>
