--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         <marquee behavior="alternate" direction="right">Vacío Temporalmente</marquee>
         <br>
         <h3>En Proceso</h3>
+        <div class="lista">
+            <div class="paginas">
+                <a target="_blank" href="http://robert-romero.eshost.com.ar">
+                    <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estuio">
+                </a>
+                <div class="nombre">La Caja Tecnológica -
+                    es una tarea de mi instituto :)
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
