Corrección de caligrafía

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Mi nombre es Robert Romero, tengo 18 años. Actualmente sigo la tecnicatura Superior en Programacion de Aplicaciones 
                     Informáticas.
                     <br>
-                    Fuera de discurso, soy una persona bastante apasionada a la informática en general, pero con mayor inclinacióbn hacia 
+                    Fuera de discurso, soy una persona bastante apasionada a la informática en general, pero con mayor inclinación hacia 
                     la programación...
                     <br>
                     Soy consciente de que aún me falta bastante por aprender y experimentar, por esa razón, busco trabajar con empresas 
