--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     la programación...
                     <br>
                     Soy consciente de que aún me falta bastante por aprender y experimentar, por esa razón, busco trabajar con empresas 
-                    y unirme a comunidaes para colaborar, aprender, y desarrollar mis habilidades.
+                    y unirme a comunidades para colaborar, aprender, y desarrollar mis habilidades.
                     <br>
                     Sueño con vivir de mis conocimientos, y a la vez, crear o contribuir a soluciones que pueda brindar, a través de mi trabajo.
                     <br>
