Descripcion de lenguajes en LaCajaTech

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estuio">
                 </a>
                 <div class="nombre">La Caja Tecnológica -
-                    es una tarea de mi instituto :)
+                    es una tarea de mi instituto (HTML-CSS-JS)
                 </div>
             </div>
         </div>
