Actualización de mejora

--- a/index.html
+++ b/index.html
@@ -40,16 +40,24 @@
         <hr><br>
         <h2>Portafolio</h2>
         <h3>Terminados</h3>
-        <marquee behavior="alternate" direction="right">Vacío Temporalmente</marquee>
-        <br>
+        <div class="lista">
+            <div class="paginas">
+                <a target="_blank" href="https://ctfp-pj.netlify.app/">
+                    <img src="PNG/paginas/CTFP-PJ.png" alt="Página grupal">
+                </a>
+                <div class="nombre">
+                    <b>Programación CTFP-PJ.</b><br>Es una página para organizar al curso (HTML-CSS)
+                </div>
+            </div>
+        </div>
         <h3>En Proceso</h3>
         <div class="lista">
             <div class="paginas">
                 <a target="_blank" href="http://robert-romero.eshost.com.ar">
                     <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estuio">
                 </a>
-                <div class="nombre">La Caja Tecnológica -
-                    es una tarea de mi instituto (HTML-CSS-JS)
+                <div class="nombre">
+                    <b>La Caja Tecnológica</b><br>Es una tarea terminada de mi instituto, pero le falta responsive (HTML-CSS-JS)
                 </div>
             </div>
         </div>
