Actualización de vista, más página nueva

--- a/index.html
+++ b/index.html
@@ -49,16 +49,21 @@
                     <b>Programación CTFP-PJ.</b><br>Es una página para organizar al curso (HTML-CSS)
                 </div>
             </div>
-        </div>
-        <h3>En Proceso</h3>
-        <div class="lista">
             <div class="paginas">
-                <a target="_blank" href="http://robert-romero.eshost.com.ar">
-                    <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estuio">
+                <a target="_blank" href="https://mburucuya-rr.netlify.app/">
+                    <img src="PNG/paginas/mburucuya.png" alt="Ejercicio de CSS">
                 </a>
                 <div class="nombre">
-                    <b>La Caja Tecnológica</b><br>Es una tarea terminada de mi instituto, pero le falta responsive (HTML-CSS-JS)
+                    <b>Cooperativa Mburucuya.</b><br>Ejercicio de estructuración con CSS (HTML-CSS)
                 </div>
+            </div>
+        </div>
+        <div class="paginas">
+            <a target="_blank" href="http://robert-romero.eshost.com.ar">
+                <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estudio">
+            </a>
+            <div class="nombre">
+                <b>La Caja Tecnológica</b><br>Es una tarea terminada de mi instituto, pero le falta responsive (HTML-CSS-JS)
             </div>
         </div>
     </div>
