--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estudio">
                 </a>
                 <div class="nombre">
-                    <b>La Caja Tecnológica</b><br>Es una tarea terminada de mi instituto, pero le falta responsive (HTML-CSS-JS)
+                    <b>La Caja Tecnológica</b><br>Tarea terminada, le falta responsive (HTML-CSS-JS)
                 </div>
             </div>
         </div>
