Mejora de vista enlaces

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img src="PNG/paginas/CTFP-PJ.png" alt="Página grupal">
                 
                     <div class="nombre">
-                        <b>Programación CTFP-PJ.</b><br>Es una página para organizar al curso (HTML-CSS)
+                        <b>Programación CTFP-PJ.</b><br>Es una página para organizar al curso <br> (HTML-CSS)
                     </div>
                 </a>
                 </div>
@@ -53,7 +53,7 @@
                 <a target="_blank" href="https://mburucuya-rr.netlify.app/">
                     <img src="PNG/paginas/mburucuya.png" alt="Ejercicio de CSS">              
                     <div class="nombre">
-                        <b>Cooperativa Mburucuya.</b><br>Ejercicio de estructuración con CSS (HTML-CSS)
+                        <b>Cooperativa Mburucuya.</b><br>Ejercicio de estructuración con CSS <br> (HTML-CSS)
                     </div>
                 </a>
             </div>
@@ -61,7 +61,7 @@
                 <a target="_blank" href="http://robert-romero.eshost.com.ar">
                     <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estudio">
                     <div class="nombre">
-                        <b>La Caja Tecnológica</b><br>Tarea terminada, le falta responsive (HTML-CSS-JS)
+                        <b>La Caja Tecnológica</b><br>Tarea terminada, le falta responsive <br> (HTML-CSS-JS)
                     </div>
                 </a>
             </div>
