--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <div id="icono-pag"><a href="index.html" class="enlaces">Robert Romero</a></div>
         <div id="redes" > <a href="https://github.com/RobertR03" target="_blank"> <img src="PNG/GitHub-Mark-Light-32px.png" alt="Ver GitHub" id="gith" onmouseover="i()" onmouseout="i()"> </a> </div>
     </header>
+    <nav>
+        <a href="documentos/curriculum-robert">
+            <div id="curriculum">
+                Descargar Curriculum
+            </div>
+        </a>
+        <div id="flecha">
+            >
+        </div>
+    </nav>
     <div id="contenedor">
         <div id="arriba">
             <hr>
