--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="redes" > <a href="https://github.com/RobertR03" target="_blank"> <img src="PNG/GitHub-Mark-Light-32px.png" alt="Ver GitHub" id="gith" onmouseover="i()" onmouseout="i()"> </a> </div>
     </header>
     <nav>
-        <a href="documentos/curriculum-robert.pdf" download="curriculum-robert">
+        <a href="documentos/curriculum-robert.pdf" download="curriculum-robert.pdf">
             <div id="curriculum">
                 Descargar Curriculum
             </div>
