--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a target="_blank" href="https://mburucuya-rr.netlify.app/">
                     <img src="PNG/paginas/mburucuya.png" alt="Ejercicio de CSS">              
                     <div class="nombre">
-                        <b>Cooperativa Mburucuya.</b><br>Ejercicio de estructuración con CSS <br> (HTML-CSS)
+                        <b>Cooperativa Mburucuya.</b><br>Ejercicio de estructuración<br> (HTML-CSS)
                     </div>
                 </a>
             </div>
