Menos texto en página

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="PNG/paginas/CTFP-PJ.png" alt="Página grupal">
                 
                     <div class="nombre">
-                        <b>Programación CTFP-PJ.</b><br>Es una página para organizar al curso <br> (HTML-CSS)
+                        <b>Programación CTFP-PJ.</b><br>Creado para organizar al curso <br> (HTML-CSS)
                     </div>
                 </a>
                 </div>
