--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 </a>
             </div>
             <div class="paginas">
+            <a target="_blank" href="https://parcial-frontend-1.netlify.app/">
+                <img src="PNG/paginas/parcial-1.png" alt="Parcial de Frontend">
+                <div class="nombre">
+                    <b>Primer parcial de frontend.</b><br>Con responsive y navegacion<br> (HTML-CSS)
+                </div>
+            </a>
+            </div>
+            <div class="paginas">
                 <a target="_blank" href="https://ctfp-pj.netlify.app/">
                     <img src="PNG/paginas/CTFP-PJ.png" alt="Página grupal">
                     <div class="nombre">
