Renovación de la caja

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </a>
             </div>
             <div class="paginas">
-                <a target="_blank" href="http://robert-romero.eshost.com.ar">
+                <a target="_blank" href="https://la-caja-tech.netlify.app/">
                     <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estudio">
                     <div class="nombre">
                         <b>La Caja Tecnológica</b><br>Tarea terminada, le falta responsive <br> (HTML-CSS-JS)
