--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a target="_blank" href="https://la-caja-tech.netlify.app/">
                     <img src="PNG/paginas/LaCajaTech.png" alt="Ejercitario de estudio">
                     <div class="nombre">
-                        <b>La Caja Tecnológica</b><br>Tarea terminada, le falta responsive <br> (HTML-CSS-JS)
+                        <b>La Caja Tecnológica</b><br>Primera tarea realizada<br> (HTML-CSS-JS)
                     </div>
                 </a>
             </div>
