Agrego Reproductor MP3

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                     </div>
                 </a>
             </div>
+
+            <div class="paginas">
+                <a target="_blank" href="https://reproductormp3.netlify.app/">
+                    <img src="PNG/paginas/ReproductorMp3.png" alt="Reproductor Mio">
+                    <div class="nombre">
+                        <b>Reproductor Mio.</b><br>Funciones con JavaScript<br>(JS-HTML-CSS)
+                    </div>
+                </a>
+            </div>
+
             <div class="paginas">
             <a target="_blank" href="https://parcial-frontend-1.netlify.app/">
                 <img src="PNG/paginas/parcial-1.png" alt="Parcial de Frontend">
