Mejor descripción para reproductor mp3

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a target="_blank" href="https://reproductormp3.netlify.app/">
                     <img src="PNG/paginas/ReproductorMp3.png" alt="Reproductor Mio">
                     <div class="nombre">
-                        <b>Reproductor Mio.</b><br>Funciones con JavaScript<br>(JS-HTML-CSS)
+                        <b>Reproductor Mio.</b><br>Reproductor Mp3<br>(JS-HTML-CSS)
                     </div>
                 </a>
             </div>
