Acualizo pag ctf

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             </div>
             <div class="paginas">
                 <a target="_blank" href="https://ctfp-pj.netlify.app/">
-                    <img src="PNG/paginas/CTFP-PJ.png" alt="Página grupal">
+                    <img src="PNG/paginas/CTF_V2.png" alt="Página de curso">
                     <div class="nombre">
-                        <b>Programación CTFP-PJ.</b><br>Creado para organizar al curso <br> (HTML-CSS)
+                        <b>Programación CTFP-PJ.</b><br>Creado para organizar a mi curso <br> (HTML-CSS)
                     </div>
                 </a>
                 </div>
