--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
                 <img class="imagen" src="JPG/GraduNew.jpg" alt="Recibido e BTI :)">
             </div>
             <div>
-                <p>Mi nombre es Robert Romero, tengo 18 años. Actualmente sigo la tecnicatura Superior en Programacion de Aplicaciones 
+                <p>Mi nombre es Robert Romero, tengo 18 años. Actualmente sigo la Tecnicatura Superior en Programacion de Aplicaciones 
                     Informáticas.
                     <br>
-                    Fuera de discurso, soy una persona bastante apasionada a la informática en general, pero con mayor inclinación hacia 
-                    la programación...
+                    Soy una persona bastante apasionada a la informática en general, pero me encantaría dedicarme profesionalmente 
+                    al desarrollo de software.
                     <br>
-                    Soy consciente de que aún me falta bastante por aprender y experimentar, por esa razón, busco trabajar con empresas 
-                    y unirme a comunidades para colaborar, aprender, y desarrollar mis habilidades.
+                    Soy consciente de mis capacidades, y se que soy bueno utilizando la lógica para resolver problemas, solo necesito oportunidades para demostrarlo
                     <br>
                     Sueño con vivir de mis conocimientos, y a la vez, crear o contribuir a soluciones que pueda brindar, a través de mi trabajo.
                     <br>
