--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <p>Mi nombre es Robert Romero, tengo 18 años. Actualmente sigo la Tecnicatura Superior en Programacion de Aplicaciones 
                     Informáticas.
                     <br>
-                    Soy una persona bastante apasionada a la informática en general, pero me encantaría dedicarme profesionalmente 
-                    al desarrollo de software.
+                    Soy una persona bastante apasionada a la informática en general, me inclino al area del 
+                    desarrollo de software debido a que disfruto resolver problemas, aprender y descubrir constantemente cosas nuevas.
                     <br>
                     Soy consciente de mis capacidades, y se que soy bueno utilizando la lógica para resolver problemas, solo necesito oportunidades para demostrarlo
                     <br>
