--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <br><hr><br>
-        <h2>Portafolio</h2>
+        <h2>Portafolio - Web Design</h2>
         <div class="lista">
             <div class="paginas">
                 <a target="_blank" href="https://tssystem.netlify.app/">
