Detallo el uso de JS en página del curso

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a target="_blank" href="https://ctfp-pj.netlify.app/">
                     <img src="PNG/paginas/CTF_V2.png" alt="Página de curso">
                     <div class="nombre">
-                        <b>Programación CTFP-PJ.</b><br>Creado para organizar a mi curso <br> (HTML-CSS)
+                        <b>Programación CTFP-PJ.</b><br>Creado para organizar a mi curso <br> (HTML-CSS-JS)
                     </div>
                 </a>
                 </div>
