Actualizo mi edad y mejoro mi descripción

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 <img class="imagen" src="JPG/GraduNew.jpg" alt="Recibido e BTI :)">
             </div>
             <div>
-                <p>Mi nombre es Robert Romero, tengo 18 años. Actualmente sigo la Tecnicatura Superior en Programacion de Aplicaciones 
+                <p>Mi nombre es Robert Romero, tengo 19 años. Actualmente sigo la Tecnicatura Superior en Programacion de Aplicaciones 
                     Informáticas.
                     <br>
                     Soy una persona bastante apasionada a la informática en general, me inclino al area del 
                     desarrollo de software debido a que disfruto resolver problemas, aprender y descubrir constantemente cosas nuevas.
                     <br>
-                    Soy consciente de mis capacidades, y se que soy bueno utilizando la lógica para resolver problemas, solo necesito oportunidades para demostrarlo
+                    Soy consciente de mis capacidades, y se que soy bueno utilizando la lógica para resolver problemas, solo necesito oportunidades para demostrarlo.
                     <br>
                     Sueño con vivir de mis conocimientos, y a la vez, crear o contribuir a soluciones que pueda brindar, a través de mi trabajo.
                     <br>
-                    No pienso dejar de estudiar cuando lo consiga, porque es lo que me gusta, además, nunca es tarde para tener una buena idea.
+                    Disfruto los retos, porque sé que no son 100% imposibles de lograr.
                 </p>
             </div>
         </div>
