corrección de redireccion en item estético

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                     </li>
 
                     <li>
-                        <a href="#" target="_blank">
+                        <span>
                             <i class="fa fa-ellipsis-vertical">
     
                             </i>
-                        </a>
+                        </span>
                     </li>
     
                     <li>
