Actualización de curriculumn y descripcion personal

--- a/index.html
+++ b/index.html
@@ -34,17 +34,12 @@
         <article class="card-body mb-5">
             <p class="myDescrription">
                 <img src="JPG/foto1.jpg" alt="YO" class="myPhoto">
-                Mi nombre es Robert Romero, tengo 19 años. Actualmente sigo la Tecnicatura Superior en Programacion de Aplicaciones 
-                Informáticas.
+                Mi nombre es Robert Romero, tengo 19 años y soy una persona bastante apasionada a la informática en general.
                 <br>
-                Soy una persona bastante apasionada a la informática en general, me inclino al area del 
-                desarrollo de software debido a que disfruto resolver problemas, aprender y descubrir constantemente cosas nuevas.
+                Me inclino hacia el desarrollo de software debido a que soy bueno en algo que disfruto hacer...
+                Resolver problemas usando lógica, porque aprender y descubrir cosas nuevas es algo constante durante el proceso de desarrollo de cualquier proyecto.
                 <br>
-                Soy consciente de mis capacidades, y se que soy bueno utilizando la lógica para resolver problemas, solo necesito oportunidades para demostrarlo.
-                <br>
-                Sueño con vivir de mis conocimientos, y a la vez, crear o contribuir a soluciones que pueda brindar, a través de mi trabajo.
-                <br>
-                Disfruto los retos, porque sé que no son 100% imposibles de lograr.
+                Además, considero que la programacion es una herrraienta que mezcla mis sueños y aficiones, tenindo en cueta que me encanta el arte y la tecnología, y sueño con contribuir a soluciones a través de mis conocimientos aplicados a situaciones problemáticas reales.
             </p>
 
             <h2>Portafolio - Web Design</h2>
@@ -130,8 +125,8 @@
             <h4 class="text-left">GitHub</h4>
         </div>
 
-        <div class="text-center pt-2" id="contacts">
-            <footer class="footer">
+        <div class="text-center pt-2" >
+            <footer class="footer" id="contacts">
                 <ul>
                     <li>
                         <a href="https://wa.me/595984748295?text=Hola%20Robert!" target="_blank">
