arreglo error en escritura

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Me inclino hacia el desarrollo de software debido a que soy bueno en algo que disfruto hacer...
                 Resolver problemas usando lógica, porque aprender y descubrir cosas nuevas es algo constante durante el proceso de desarrollo de cualquier proyecto.
                 <br>
-                Además, considero que la programacion es una herrraienta que mezcla mis sueños y aficiones, tenindo en cueta que me encanta el arte y la tecnología, y sueño con contribuir a soluciones a través de mis conocimientos aplicados a situaciones problemáticas reales.
+                Además, considero que la programacion es una herramienta que mezcla mis sueños y aficiones, tenindo en cueta que me encanta el arte y la tecnología, y sueño con contribuir a soluciones a través de mis conocimientos aplicados a situaciones problemáticas reales.
             </p>
 
             <h2>Portafolio - Web Design</h2>
