--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <nav class="nav nav-masthead justify-content-center float-md-end">
                 
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                <a class="nav-link" href="documentos/curriculum-robert.pdf" target="_blank" download="curriculum-robert.pdf">Descargar Curriculum</a>
+                <a class="nav-link" href="curriculum.html" target="_blank">Curriculum</a>
                 <a class="nav-link" href="#contacts">Contacto</a>
 
               </nav>
@@ -34,29 +34,27 @@
         <article class="card-body mb-5">
             <p class="myDescrription">
                 <img src="JPG/foto1.jpg" alt="YO" class="myPhoto">
-                Mi nombre es Robert Romero, tengo 20 años y soy una persona bastante apasionada a la informática en general.
-                <br>
-                Me inclino hacia el desarrollo de software debido a que soy bueno en algo que disfruto hacer...
-                Resolver problemas usando lógica, porque aprender y descubrir cosas nuevas es algo constante durante el proceso de desarrollo de cualquier proyecto.
-                <br>
-                Además, considero que la programacion es una herramienta que mezcla mis sueños y aficiones, teniendo en cueta que me encanta el arte y la tecnología, y sueño con contribuir a soluciones a través de mis conocimientos aplicados a situaciones problemáticas reales.
+                Mi nombre es Robert Romero, un entusiasta con una 
+                pasión por el fascinante mundo de la informática.
+                Mi inclinación natural hacia el desarrollo de software se 
+                nutre de mi habilidad para abordar desafíos con una 
+                mente lógica y resolutiva, transformando problemas en 
+                oportunidades de aprendizaje constante. La programación 
+                se presenta ante mí como una herramienta cautivadora 
+                que mezcla mis sueños y aficiones... Mi aspiración más 
+                profunda es contribuir con mis conocimientos a soluciones 
+                aplicadas en situaciones problemáticas del mundo 
+                real, convirtiendo mis sueños en proyectos con 
+                impacto significativo.
+            </p>
+            <p>
+                Hasta la fecha, he trabajado en más de 48 proyectos, en su mayoría de carácter privado. También tengo una larga lista de proyectos personales por realizar, aunque aún no he comenzado a ejecutarlos debido a que combino trabajo y estudios simultáneamente.
             </p>
 
-            <h2>Portafolio - Web Design</h2>
+            <h2>Echa un vistazo...</h2>
             <br>
             <section class="paginas">
                 
-                <div class="carde">
-                    <img src="PNG/paginas/CTF_V2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Programación CTFP-PJ.</h5>
-                    <p class="card-text">Creado para organizar a mi curso. (HTML-CSS-JS)</p>
-                    </div>
-                    <div class="card-footer bg-transparent border-0">
-                        <a href="https://ctfp-pj.netlify.app/index.html" target="_blank" class="btn btn-primary">Quiero verlo 👀</a>
-                    </div>
-                </div>
-
                 <div class="carde">
                     <img src="PNG/paginas/ReproductorMp3.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -68,49 +66,6 @@
                     </div>
                 </div>
 
-                <div class="carde">
-                    <img src="PNG/paginas/TSsystem.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">TSsystem</h5>
-                        <p class="card-text">Implementación de carousel con Bootstrap. (HTML-CSS-JS)</p>
-                    </div>
-                    <div class="card-footer bg-transparent border-0">
-                        <a href="https://tssystem.netlify.app/index.html" target="_blank" class="btn btn-primary">Quiero verlo 👀</a>
-                    </div>
-                </div>
-
-                <div class="carde">
-                    <img src="PNG/paginas/parcial-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Responsive page</h5>
-                    <p class="card-text">Implementación de responsive con css. (HTML-CSS)</p>
-                    </div>
-                    <div class="card-footer bg-transparent border-0">
-                        <a href="https://parcial-frontend-1.netlify.app/index.html" target="_blank" class="btn btn-primary">Quiero verlo 👀</a>
-                    </div>
-                </div>
-
-                <div class="carde">
-                    <img src="PNG/paginas/mburucuya.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">Cooperativa Mburucuya.</h5>
-                    <p class="card-text">Ejercicio de estructuración absoluta. (HTML-CSS)</p>
-                    </div>
-                    <div class="card-footer bg-transparent border-0">
-                        <a href="https://mburucuya-rr.netlify.app/index.html" target="_blank" class="btn btn-primary">Quiero verlo 👀</a>
-                    </div>
-                </div>
-
-                <div class="carde">
-                    <img src="PNG/paginas/LaCajaTech.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title">La Caja Tecnológica.</h5>
-                    <p class="card-text">Primera página web. (HTML-CSS-JS)</p>
-                    </div>
-                    <div class="card-footer bg-transparent border-0">
-                        <a href="https://la-caja-tech.netlify.app/index.html" target="_blank" class="btn btn-primary">Quiero verlo 👀</a>
-                    </div>
-                </div>
             </section>
 
         </article>
