--- a/curriculum.html
+++ b/curriculum.html
@@ -42,6 +42,8 @@
                         <span>PHP</span>
                         <span>PYTHON</span>
                         <span>JAVA</span>
+                        <span>MySql</span>
+                        <span>Oracle</span>
                     </div>
                 </div>
                 <div class="w-100 mt-3 ms-4">
