--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="public/PNG/ICO/Yo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <title>mipresentacion</title>
+    <title>Robert Romero</title>
   </head>
   <body>
     <!-- A little help for the Netlify bots if you're not using a SSG -->
